<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_actionbar_back"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewHeading"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/notification_sound"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <com.proto.type.profile.widget.ItemToggleView
        android:id="@+id/itvDisturb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:itv_key="@string/do_not_disturb"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/textViewHeading"/>

    <com.proto.type.profile.widget.ItemToggleView
        android:id="@+id/itvPreviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_key="@string/show_preview"
        app:itv_desc="@string/show_preview_desc"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/itvDisturb"/>

    <TextView
        android:id="@+id/tvPrivateMsg"
        style="@style/TextProfileHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/itvPreviews"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        android:text="@string/private_message"/>

    <com.proto.type.profile.widget.ItemToggleView
        android:id="@+id/itvNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_key="@string/show_notification"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/tvPrivateMsg"/>

    <com.proto.type.profile.widget.ItemProfileView
        android:id="@+id/ipvSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itvNotification"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:ipv_title="@string/sound"
        app:ipv_value="Melody"
        app:ipv_show_arrow="true"
        app:ipv_show_divider="false"/>

    <TextView
        android:id="@+id/tvGroupMsg"
        style="@style/TextProfileHeading"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ipvSound"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        android:text="@string/group_message"/>

    <com.proto.type.profile.widget.ItemToggleView
        android:id="@+id/itvGrNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_key="@string/show_notification"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/tvGroupMsg"/>

    <com.proto.type.profile.widget.ItemProfileView
        android:id="@+id/ipvGrSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itvGrNotification"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:ipv_title="@string/sound"
        app:ipv_value="Melody"
        app:ipv_show_arrow="true"
        app:ipv_show_divider="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screen_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>