<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_theme">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_actionbar_back"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewHeading"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/delete_your_account"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <com.proto.type.base.ui.widget.IndexTextView
        android:id="@+id/itvFirstMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_text="@string/delete_account_profile"
        app:layout_constraintTop_toBottomOf="@id/textViewHeading"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"/>

    <com.proto.type.base.ui.widget.IndexTextView
        android:id="@+id/itvSecondMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_text="@string/delete_all_group"
        app:layout_constraintTop_toBottomOf="@id/itvFirstMsg"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"/>

    <com.proto.type.base.ui.widget.IndexTextView
        android:id="@+id/itvThirdMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itv_text="@string/delete_message_history"
        app:layout_constraintTop_toBottomOf="@id/itvSecondMsg"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"/>

    <TextView
        android:id="@+id/tvEnterPhone"
        style="@style/TextEnterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/enter_phone_number"
        app:layout_constraintTop_toBottomOf="@id/itvThirdMsg"
        app:layout_constraintStart_toStartOf="@id/glStart"/>

<!--    <com.hbb20.CountryCodePicker-->
<!--        android:id="@+id/ccpCountry"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="@id/glStart"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvEnterPhone"-->
<!--        android:layout_marginStart="@dimen/medium_margin"/>-->

    <EditText
        android:id="@+id/etPhone"
        style="@style/SignUpEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/tvEnterPhone"
        app:layout_constraintStart_toStartOf="@+id/tvEnterPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterPhone" />

    <Button
        android:id="@+id/btDelete"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:backgroundTint="@color/red"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screen_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>
