<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_actionbar_back"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewHeading"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <com.proto.type.profile.widget.ItemProfileView
        android:id="@+id/ipvTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:ipv_title="@string/term_condition"
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/textViewHeading"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:ipv_show_divider="false"
        app:ipv_show_arrow="true"/>

    <com.proto.type.profile.widget.ItemProfileView
        android:id="@+id/ipvPrivacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/ipvTerm"
        app:ipv_title="@string/privacy_policy"
        app:ipv_show_divider="false"
        app:ipv_show_arrow="true"/>

    <com.proto.type.profile.widget.ItemProfileView
        android:id="@+id/ipvVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/ipvPrivacy"
        app:ipv_title="@string/chatq_version"
        app:ipv_value="2.0.2"
        app:ipv_show_divider="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screen_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>