<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_actionbar_back"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewHeading"
        style="@style/TextViewHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/change_phone_number"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/textViewMessage"
        style="@style/TextViewChatSubTitle"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/change_phone_number_desc"
        android:textColor="@color/black_sub_title"
        android:textSize="@dimen/text_size_l2"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

    <ImageView
        android:id="@+id/ivSimCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sim_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"/>

    <TextView
        android:id="@+id/tvChangeNumber"
        style="@style/TextEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/ivSimCard"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        android:text="@string/change_number"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screen_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>